<resources>
    <string name="app_name">Majika</string>
    <string name="title_pembayaran">Payment</string>
    <string name="title_menu">Menu</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_branch">Branches</string>
    <string name="title_cart">Cart</string>
    <string name="database_name">majika_db</string>
    <string name="no_results">No Results</string>
    <string name="food_menu">Food Menu</string>
    <string name="beverages_menu">Beverages Menu</string>
    <string name="scan">Scan</string>
    <string name="total_pembayaran">Total: %1$d</string>
    <string name="content_description">Camera Scanner</string>
    <string name="harga_cart">%1$s %2$d</string>
    <string name="total_cart">Total: %1$d</string>
    <string name="sold_menu">%1$d sold</string>
    <string name="branches_count">%1$d branches</string>
    <string name="temperature">%1$.1f °C</string>
    <string name="add_button_desc">Button to add quantity</string>
    <string name="reduce_button_desc">Button to reduce quantity</string>
    <string name="success_dialog_msg">Payment successful! Redirecting to menu in %1$d seconds …</string>
    <string name="channel_name">MAJIKA</string>
    <string name="channel_description">Majika notification channel</string>
    <string name="timer">Back to Menu</string>
    <string name="camera_preview_button_text">Capture</string>
    <string name="twibbon_image_view">image view</string>
    <string name="empty_cart">Cart is empty! :(</string>
    <string name="empty_cart_info">You can add some items from the Menu page!</string>
    <string name="empty_branch">No branches found! :(</string>
    <string name="empty_branch_info">Please try again later</string>
    <string name="empty_food">No food found! :(</string>
    <string name="empty_drinks">No beverages found! :(</string>
    <string name="pay">PAY NOW</string>
    <string name="popular_food">Popular food: %1$s</string>
</resources>